--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Komenda html5 generuje podstawowy szkielet strony-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +12,8 @@
         <h1>
             pierwszy naglowek html
         </h1>
+        <li>one, two</li>
+        <li>three</li> <!-- komentarz tutaj-->
     </div>
 </body>
 </html>
