--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +11,34 @@
 <body>
     <div>
         <h1>
-            pierwszy naglowek html
+            Moja pierwsza zakodzona strona
         </h1>
-        <li>one, two</li>
-        <li>three</li> <!-- komentarz tutaj-->
+        <h2>"pierwsze koty za płoty"</h2>
+        &nbsp;
+
+        <h3>W najbliższym czasie skupiam się na:</h3>
+        <ul><li>Html</li><li>css</li><li>js</li></ul> <!-- komentarz tutaj-->
     </div>
+<h2> Fundamenty</h2>
+    <div class="clearfix">
+        <div class="box"><p><center>HTML</center></p></div>
+        <div class="box"><p><center>CSS</center></p></div>
+        <div class="box"><p><center>JAVASCRIPT</center></p></div>
+        </div>
+    &nbsp;
+    
+<h3>Flow nauki programowania:</h3>
+    <ol><li>Przejście przez cały prework</li>
+    <li>wykonanie zadań z preworku</li>
+<li>Przygotowanie narzędzi do dalszej pracy</li>
+<li>Przejrzenie kolejnych tematów zajęć</li></ol>
 </body>
 </html>
+
+
+
+Jak się ze mną skontaktować?
+<a href="www.facebook.com/ppawlowski7">mój facebook</a>
+<a href="@"
+&nbsp; <!-- nielamliwa spacja-->
+
