--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <title>Moja pierwsza zakodzona strona</title>
 </head>
 <body>
-
+<div class="container">
     <div class="header">
-        <h1>Moja pierwsza zakodzona strona</h1>
+        <div class="imbg-cont">
+        <img src="img/it7.jpg" class="imgbg">
+        <div class="textcover"><h1>Moja pierwsza zakodzona strona</h1>
         <p>Na podstawie przygotowań do kursu Front-End Dev.</p>
-      </div>
-      
+    </div>
+    </div>
+</div>
       <div class="topnav">
         <a href ="#">Strona główna</a>
         <a href ="#">O mnie</a>
@@ -29,7 +32,8 @@
           <div class="card">
             <h2>HTML buduje szkielet strony</h2>
             <h5>7.11.2020, początek kodowania</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
+            <div class="img">
+            <img src="img/it1.jpg" style="width:350px;height:200px"></div>
             <p>Some text..</p>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
           </div>
@@ -44,15 +48,17 @@
         <div class="rightcolumn">
           <div class="card">
             <h2>About Me</h2>
-            <div class="fakeimg" style="height:100px;">Image</div>
+            <div class="avatar">
+                <img src="img/it8.jpg" class="profile-pic"></div>
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
           </div>
           <div class="card">
-            <h3>Popular Post</h3>
-            <div class="fakeimg"><p>Image</p></div>
-            <div class="fakeimg"><p>Image</p></div>
-            <div class="fakeimg"><p>Image</p></div>
-          </div>
+            <h3>Opracowywane technologie</h3>
+           <ul><li><div class="img"><p>HTML</p></div></li>
+            <li><div class="img"><p>Css</p></div></li>
+            <li><div class="img"><p>Javascript</p></div></li>
+           </ul>  
+        </div>
           <div class="card">
             <h3>Follow Me</h3>
             <p>Some text..</p>
@@ -63,18 +69,18 @@
       <div class="blocks">
         <h2>TITLE HEADING</h2>
         <h5>Title description, Dec 7, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
+        <div class="img"><img src="img/unsplash4.jpg" class="befoot"></div>
         <p>Some text..</p>
         <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
       </div>
       <div class="footer">
-          <div class="leftfooter"><p>Pierwsza strona internetowa z wykorzystaniem HTML, CSS</p></div>
+          <div class="leftfooter"><p>Pierwsza strona internetowa<br> z wykorzystaniem HTML, CSS.<br><br>Pierwsze kody za płoty!</p></div>
           <div class="midfooter"><p></p></div>
           <div class="rightfooter"><b>Jak się ze mną skontaktować?</b><br><br><a href="www.facebook.com/ppawlowski7">Facebook</a><br><a href="mailto:ppawlowski7@gmail.com">E-mail</a>
         </div>
-        <h2></h2>
+
       </div>
-    
+    </div>
     </body>
     </html>
 
