dolny slider + effekt

--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
            </ul>  
         </div>
           <div class="card">
-            <h3>Follow Me</h3>
-            <p>Some text..</p>
+            <h3>Dodatkowe oprogramowanie:</h3>
+            <p>Adobe Premiere Pro, After Effects, Audition, Adobe Illustrator, Adobe Photoshop, Adobe Lightroom, InDesign, Windows, OS X</p>
           </div>
         </div>
       </div>
       
       <div class="blocks">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Dec 7, 2017</h5>
-        <div class="img"><img src="img/unsplash4.jpg" class="befoot"></div>
+    
+        <div class="module mid"><h2>Poziom zajarania: <a href="#" class="class2">100%</a></h2>
+        </div>
         <p>Some text..</p>
         <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
       </div>
       <div class="footer">
           <div class="leftfooter"><p>Pierwsza strona internetowa<br> z wykorzystaniem HTML, CSS.<br><br>Pierwsze kody za płoty!</p></div>
           <div class="midfooter"><p></p></div>
-          <div class="rightfooter"><b>Jak się ze mną skontaktować?</b><br><br><a href="www.facebook.com/ppawlowski7">Facebook</a><br><a href="mailto:ppawlowski7@gmail.com">E-mail</a>
+          <div class="rightfooter"><b>Jak się ze mną skontaktować?</b><br><br><a href="www.facebook.com/ppawlowski7" class="class1">Facebook</a><br><a href="mailto:ppawlowski7@gmail.com">E-mail</a>
         </div>
 
       </div>
