--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
       <div class="blocks">
             <div class="module mid"><h2>Poziom zajarania: <a href="#" class="class2">100%</a></h2>
             </div>
-            <p>Some text..</p>
+            
+        </div>
+        <div class="card">
+        <p>Some text..</p>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </div>
-
    
         <div class="blackbox">
             <div class="blackboxleft">
@@ -90,7 +92,7 @@
     
 
       <div class="footer">
-          <div class="leftfooter"><p>Pierwsza strona internetowa<br> z wykorzystaniem HTML, CSS.<br><br>Pierwsze kody za płoty!</p>
+          <div class="leftfooter"><p>Pierwsza strona internetowa<br> z wykorzystaniem HTML, CSS.</p>
           </div>
           <div class="midfooter"><p></p>
           </div>
