--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
             <div class="avatar">
                 <img src="img/it9.jpg" class="profile-pic">
             </div>
-            <p>To nie ja. Ale lubię dobry design, fajną typografię i porządek w kodzie.</p>
+            <p>To nie ja. Ale lubię dobry design, fajną typografię i porządek w kodzie. Filmuję i fotografuję. Łączę świat kreatywny z technologią.</p>
           </div>
             <div class="card">
                 <h3>Opracowywane technologie</h3>
-                 <ul><li><div class="img"><p>HTML</p></div></li>
-                <li><div class="img"><p>Css</p></div></li>
-                <li><div class="img"><p>JS</p></div></li>
+                 <ul style="line-height:140%">
+                    <li>HTML</li>
+                <li>Css</li>
+                <li>JS</li>
                  </ul> 
-                <br> 
+                <br>
                  <p>Start nauki 07.11.2020 <div></div></p>
           </div>
           <div class="card">
@@ -86,7 +87,7 @@
                 <img src="/img/it11.jpg" height="300px;">
             </div>
             <div class="blackboxright">
-                <h2>Śmiało można rzec, <i>pierwsze kody za płoty!</i></h2>
+                <h2>Śmiało można rzec, <a href="#" class="class2"><i>pierwsze kody za płoty!</i></a></h2>
             </div>
         </div>
     
